--- a/app/src/main/res/layout/activity_tween.xml
+++ b/app/src/main/res/layout/activity_tween.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_tween"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="tween补间动画"
