--- a/app/src/main/res/layout/activity_tween.xml
+++ b/app/src/main/res/layout/activity_tween.xml
@@ -44,6 +44,12 @@
             android:onClick="onClick"
             android:text="rotate(旋转)" />
 
+        <Button
+            android:id="@+id/btn_set"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="set" />
     </LinearLayout>
 
     <RelativeLayout
@@ -55,7 +61,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@mipmap/ic_tween" />
+            android:src="@mipmap/ic_tween"
+            android:onClick="onClick"/>
     </RelativeLayout>
 
 </LinearLayout>
